[tool.poetry]
name = "ny_lapper"
version = "0.1.0"
description = "Python wrapper for nim-lapper using nython"
authors = ["Seth Stadick <sstadick@gmail.com>"]
license = "MIT"
build = "build.py"

[tool.poetry.dependencies]
python = "^3.7"
nython = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.3.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
